# master-programming

./: CMakeLists.txt  GitHub.css  LICENSE  README.adoc  README.md  README.rst  index.html  lecture-1.html  lecture-1.md  lecture-10.html  lecture-11.html  lecture-12.html  lecture-13.html  lecture-2.html  lecture-2.md  lecture-3.html  lecture-3.md  lecture-4.html  lecture-4.md  lecture-5.html  lecture-5.md  lecture-6.html  lecture-7.html  lecture-7.md  lecture-8.html  lecture-9.html  lesson-1.md  lesson-2.md  metadata.yml  nixos-setup.html  nixos-setup.md  shell.nix  stl.puml  tasks.html
.circleci/: config.yml
.github/workflows/: main.yml
cmake/: warn2err.cmake
cmake/templates/: slidy-custom.css
lecture-1/: CMakeLists.txt  index.adoc  index.md  index.rst
lecture-10/: CMakeLists.txt  index-1.adoc  index-2.adoc  index-3.adoc  index-part1.rst  index-part2.rst  index-part4.rst  index.adoc  index.html  index.rst  index1.rst  index10.rst  index11.rst  index12.rst  index13.rst  index14.rst  index15.rst  index16.rst  index17.rst  index4.rst  index6.rst  index7.rst  index8.rst  index9.rst
lecture-10/images/: builder.uml  chain_of_responsibility.uml  facade.uml  flyweight.uml  notation.dot  notation.uml
lecture-10/uml/: abstract_factory.uml  adapter.uml  composite.uml  decorator.uml  factory_method.uml  iterator.uml  memento.uml  notation.uml  proxy.uml  state.uml  strategy.uml  template_method.uml  visitor.uml
lecture-11/: CMakeLists.txt  index.adoc  index.rst
lecture-12/: CMakeLists.txt  index.adoc  index.html  index.rst
lecture-12/imgproc/: CMakeLists.txt  CTestCustom.cmake  README.rst  imgproc-config.cmake.in  imgproc-version.hpp.in  shell.nix
lecture-12/imgproc/include/: imgproc.hpp
lecture-12/imgproc/src/: main.cpp
lecture-12/imgproc/tests/: CMakeLists.txt  imgproc.cpp
lecture-13/: CMakeLists.txt  index.adoc  index.html  index.rst
lecture-2/: CMakeLists.txt  index.adoc  index.html  index.rst
lecture-3/: CMakeLists.txt  index.adoc  index.html  index.rst  library.dot
lecture-3/images/: library.dot
lecture-4/: CMakeLists.txt  index.adoc  index.html  index.rst  lecture-4.md
lecture-5/: CMakeLists.txt  index.adoc  index.rst  lecture-5.md  lecture-6.md
lecture-6/: CMakeLists.txt  index.adoc  index.html  index.rst  lecture-7.md
lecture-6/images/: stl.dot  stl.uml
lecture-7/: CMakeLists.txt  example.cpp  index.adoc  index.html  index.rst  lecture-8.md  sfinae.cpp
lecture-7/images/: ref.dot
lecture-8/: CMakeLists.txt  csv.cpp  example1.cpp  example2.cpp  example3.cpp  index-part1.rst  index-part2.rst  index-part3.rst  index-part4.rst  index.adoc  index.html  index.rst  lecture-9.md
lecture-8/images/: command.uml
lecture-8/uml/: observer.uml  prototype.uml  singleton.uml
lecture-9/: CMakeLists.txt  example10-1.cpp  example10-2.cpp  example10-3.cpp  example12-1.cpp  example12-2.cpp  example12-3.cpp  example13-1.cpp  example13-2.cpp  example14-1.cpp  example14-2.cpp  example15-1.cpp  example15-2.cpp  example15-2.ini  example15-3.cpp  example15-4.cpp  example16-1.cpp  example16-2.cpp  example16-3.cpp  example2-1.cpp  example2-2.cpp  example2-3.cpp  example2-4.cpp  example3-1.cpp  example3-2.cpp  example3-3.cpp  example3-4.cpp  example3-5.cpp  example3-6.cpp  example4-1.cpp  example4-2.cpp  example4-3.cpp  example4-4.cpp  example5-1.cpp  example5-2.cpp  example6-1.cpp  example6-2.cpp  example8-1.cpp  example8-2.cpp  example8-3.cpp  (+35 more)
lecture-9/diagrams/: rule.dot
lecture-9/uml/: bridge.uml  builder.uml  mediator.uml
tasks/: CMakeLists.txt  index.adoc  index.html  index.rst
templates/: revealjs.thtml  slidy-custom.conf  slidy.thtml
