find_package(MPI REQUIRED)

file(GLOB SRCS *.cpp)
foreach(__src ${SRCS})
    get_filename_component(__name ${__src} NAME_WE)
    add_executable(${__name} ${__src})
    list(APPEND __exe ${__name})
endforeach()

set_target_properties(example2-1 PROPERTIES CXX_STANDARD 17)
set_target_properties(example3-2 PROPERTIES CXX_STANDARD 17)
target_link_libraries(example6-1 PUBLIC -pthread)
target_link_libraries(example6-2 PUBLIC rt)
target_link_libraries(example8-3 PUBLIC Boost::chrono)
target_link_libraries(example8-4 PUBLIC Boost::timer)
target_link_libraries(example10-1 PUBLIC Boost::thread)
target_link_libraries(example10-2 PUBLIC -pthread)
target_link_libraries(example10-3 PUBLIC MPI::MPI_CXX Boost::mpi)
target_link_libraries(example12-1 PUBLIC Boost::coroutine)
target_link_libraries(example15-1 PUBLIC Boost::log_setup Boost::log dl)
target_link_libraries(example15-2 PUBLIC Boost::program_options)
target_link_libraries(example15-3 PUBLIC Boost::serialization)
target_link_libraries(example16-1 PUBLIC -pthread)

file(GLOB OTHER_SRCS *.adoc)
add_asciidoc(lecture-9 index.adoc DEPENDS ${__exe} ${OTHER_SRCS})
